<resources>
    <string name="app_name" translatable="false">Buddha Quotes</string>
    <string name="version" translatable="false">v2.0.0</string>
    <string name="refresh" id="1">Refresh</string>
    <string name="favourite" id="2">Favourite</string>
    <string name="share" id="3">Share</string>
    <string name="settings" id="4">Settings</string>
    <string name="appearance" id="5">Appearance</string>
    <string name="app_theme" id="6">App Theme</string>
    <string name="light_mode" id="7">Light</string>
    <string name="dark_mode" id="8">Dark</string>
    <string name="follow_system_default" id="9">Follow system</string>
    <string name="information" id="14">Information</string>
    <string name="about" id="15">About</string>
    <string name="view_app_details" id="16">View app details</string>
    <string name="help" id="17">Help</string>
    <string name="app_introduction" id="18">App introduction</string>
    <string name="app_license" id="19">App License</string>
    <string name="gplv3" id="UNTRANSLATE" translatable="false">GPLv3 Logo</string>
    <string name="libraries_used" id="20">Libraries used</string>
    <string name="about_app_promise" id="21">App Promise</string>
    <string name="about_no_trackers" id="22">No trackers</string>
    <string name="about_complete_privacy" id="23">Complete privacy</string>
    <string name="about_offline_app" id="24">Offline app</string>
    <string name="about_free_and_open_source" id="25">Free and Open Source</string>
    <string name="about_info" id="26">App Info</string>
    <string name="about_info_paragraph" id="27">Buddha Quotes is a collaborative project to create a Free and Open Source Buddha Quotes app for Android with a focus on privacy
</string>
    <string name="about_contributors" id="28">Contributors</string>
    <string name="about_fennec" id="UNTRANSLATE" translatable="false">"@Fennec_exe"</string>
    <string name="about_jack" id="UNTRANSLATE" translatable="false">"@jack.txt"</string>
    <string name="about_izzysoft" id="UNTRANSLATE" translatable="false">"@IzzySoft"</string>
    <string name="about_licaon" id="UNTRANSLATE" translatable="false">"@licaon-kter"</string>
    <string name="about_poussinou" id="UNTRANSLATE" translatable="false">"@Poussinou"</string>
    <string name="about_acknowledgements" id="29">Acknowledgements</string>
    <string name="about_attribution" id="30">Launcher icon - Freepik via Flaticon</string>
    <string name="tick" id="31">Tick</string>
    <string name="favourited_quote" id="55">Favourited Quote</string>
    <string name="favourite_quote_delete" id="56">Delete</string>
    <string name="buddha_quotes_logo" id="57">Buddha Quotes logo</string>
    <string name="bandev_logo" id="58">BanDev logo</string>
    <string name="the_buddha" id="59">The Buddha</string>
    <string name="forward_arrow" id="60">Return</string>
    <string name="icon" id="61">Icon</string>
    <string name="title" id="62">Title</string>
    <string name="licenses" id="63">License</string>
    <string name="licenses_license" id="UNTRANSLATE" translatable="false">GPL-3.0+</string>
    <string name="licenses_permissions" id="64">Permissions</string>
    <string name="licenses_commercial_use" id="65">Commercial use</string>
    <string name="licenses_distribution" id="66">Distribution</string>
    <string name="licenses_modification" id="67">Modification</string>
    <string name="licenses_patent_use" id="68">Patent use</string>
    <string name="licenses_private_use" id="69">Private use</string>
    <string name="licenses_conditions" id="70">Conditions</string>
    <string name="licenses_disclose_source" id="71">Disclose source</string>
    <string name="licenses_copyright_notice" id="72">License and copyright notice</string>
    <string name="licenses_same_license" id="73">Same license</string>
    <string name="licenses_state_changes" id="74">State changes</string>
    <string name="licenses_limitations" id="75">Limitations</string>
    <string name="licenses_liability" id="76">Liability</string>
    <string name="licenses_warranty" id="77">Warranty</string>
    <string name="licenses_full_license" id="78">Full License</string>
    <string name="green_circle" id="79">Green circle</string>
    <string name="blue_circle" id="80">Blue circle</string>
    <string name="red_circle" id="81">Red circle</string>
    <string name="title_activity_settings" id="82">SettingsActivity</string>
    <string name="textview" id="83">TextView</string>
    <string name="MainActivity" id="84">Main Activity</string>
    <string name="title_activity_scrolling" id="85">ScrollingActivity</string>
    <string name="action_settings" id="86">Settings</string>
    <string name="appwidget_text" id="87">EXAMPLE</string>
    <string name="configure" id="88">Configure</string>
    <string name="add_widget" id="89">Add widget</string>
    <string name="open_source_libraries" id="90">Open Source Libraries</string>
    <string name="about_no_ads" id="91">No ads</string>
    <string name="lists_title" id="92">Your Lists</string>
    <string name="lists_add_item" id="93">Add to List</string>
    <string name="lists_add_lists" id="94">Create new List</string>
    <string name="lists_add_lists_go" id="95">Add</string>
    <string name="lists_add_lists_name" id="96">Name</string>
    <string name="settings_general" id="97">General</string>
    <string name="settings_accent_colour" id="98">Accent Colour</string>
    <string name="settings_shapes_mode" id="99">Shapes Mode</string>
    <string name="settings_shapes_mode_yes" id="100">On</string>
    <string name="settings_shapes_mode_no" id="101">Off</string>
    <string name="settings_language" id="102">Language</string>
    <string name="original" id="103">Default</string>
    <string name="blue" id="104">Blue</string>
    <string name="green" id="105">Green</string>
    <string name="orange" id="106">Orange</string>
    <string name="yellow" id="107">Original</string>
    <string name="teal" id="108">Teal</string>
    <string name="violet" id="109">Violet</string>
    <string name="pink" id="110">Pink</string>
    <string name="lightBlue" id="111">Light Blue</string>
    <string name="red" id="112">Red</string>
    <string name="lime" id="113">Lime</string>
    <string name="crimson" id="114">Crimson</string>
    <string name="appintro1_description" id="299">A Free and Open Source Buddha Quotes app</string>
    <string name="appintro2_title" id="300">Over 230 quotes</string>
    <string name="appintro2_description" id="301">Over 230 quotes from The Buddha. \n Swipe down to refresh!</string>
    <string name="appintro3_title" id="302">Favourites</string>
    <string name="appintro3_description" id="303">You can favourite quotes by pressing the favourite button or double tapping on the screen</string>
    <string name="appintro4_title" id="304">Customisable</string>
    <string name="appintro4_description" id="305">There is a variety of user interface options, such as accent colours and dark mode</string>
    <string name="appintro5_title" id="306">Let\'s get started!</string>
    <string name="appintro5_description" id="307">We hope you enjoy the app - we have a GitLab repository where you can request features or raise issues</string>
    <string name="cancel" id="308">Cancel</string>
    <string name="confirm" id="309">Confirm</string>
    <string name="about_translators" id="547">Translators</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="quote_number">Quote</string>
    <string name="fragment_quote">Quote</string>
    <string name="fragment_lists">Lists</string>
    <string name="fragment_meditation">Meditate</string>
    <string name="updateTitle">New year, New Buddha Quotes</string>
    <string name="updateSubheading">We have changed lots, and can\'t wait for you to try it!</string>
    <string name="carry_on">Continue</string>
    <string name="read">Blog post</string>
    <string name="meditate_title">Meditate</string>
    <string name="meditate_subheading">It\'s simple &amp; easy</string>
    <string name="meditate_space">Space</string>
    <string name="meditate_space_desc">Choose somewhere quiet where you won\'t be disturbed.</string>
    <string name="meditate_posture">Posture</string>
    <string name="meditate_posture_desc">Sit on the floor or on a straight backed chair. The key is to be comfortable!</string>
    <string name="meditate_breath">Breath</string>
    <string name="meditate_breath_desc">Take deep slow breaths, try to breath into your stomach.</string>
    <string name="play">Resume</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="time_left">Time Left</string>
    <string name="meditating_for">Meditating for</string>
    <string name="has_been_paused">has been paused</string>
    <string name="meditation_timer">Meditation Timer</string>
    <string name="more">More</string>
    <string name="addToList">Add to list</string>
    <string name="attribution_buddha">  ~Gautama Buddha</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="and">and</string>
    <string name="createNewList">Create New List</string>
    <string name="insertName">Insert name</string>
    <string name="validationRule1">Cannot contain //</string>
    <string name="validationRule2">There is already a list named Favourites</string>
    <string name="validationRule3">There is already an list named</string>
    <string name="add">Add</string>
    <string name="new_str">New</string>
    <string name="added">Added quote to </string>
    <string name="exists">This quote already exists in </string>
    <string name="start">Start</string>
</resources>