<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/fragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/quote"
            android:title="@string/fragment_quote"
            android:checked="true" />
        <item
            android:id="@+id/lists"
            android:title="@string/fragment_lists"
            android:checked="true" />
        <item
            android:id="@+id/meditate"
            android:title="@string/fragment_meditation"
            android:checked="true" />
    </group>
    <group
        android:id="@+id/activites"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:title="@string/about" />
    </group>

</menu>