<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="45dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <View
        android:id="@+id/view4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@layout/rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="87dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/mt_bold"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView"
        app:lineHeight="35dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mt_bold"
        android:text="@string/about_app_promise"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/mt_bold"
        android:text="@string/about_contributors"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/mt_bold"
        android:text="@string/about_info"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="271dp"
        android:layout_height="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="112dp"
        android:text="@string/about_no_trackers"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_no_ads"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_complete_privacy"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="355dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:text="@string/about_info_paragraph"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_offline_app"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_free_and_open_source"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_fennec"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_jack"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="262dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_izzysoft"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:layout_width="262dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:text="@string/about_licaon"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:text="@string/version"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="71dp"
        android:layout_height="68dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/bandev_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView"
        app:srcCompat="@drawable/picture2" />

    <ImageView
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <ImageView
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <ImageView
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <ImageView
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <ImageView
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <ImageView
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/ic_buddha"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>